changed smp href

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					</div>
 					<div class="col-12 text-center mt-4 mt-lg-5">
 						<p>
-							<span onclick="window.location.href='https://forms.gle/WD657xz28f3H1eWV6'">smp</span> 
+							<span onclick="window.location.href='https://dsc.gg/manninsmp'">smp</span> 
 							<span onclick="window.location.href='https://www.twitch.tv/mannin1337'">twitch</span> 
 							<span onclick="window.location.href='https://www.youtube.com/mannintv'">youtube</span> 
 							<span onclick="window.location.href='https://www.twitter.com/mannin1337'">twitter</span>
